@@ -37,6 +37,11 @@ and features:
       :ref:`kotlin-sync-client-bulk-write-replace` sections of the Bulk Write
       Operations guide
 
+   .. replacement:: k8s-link
+
+      the :ref:`MONGODB-OIDC: Kubernetes <kotlin-sync-auth-kubernetes>`
+      section of the Enterprise Authentication Mechanisms guide
+
 .. _kotlin-sync-version-5.3:
 
 What's New in 5.3
